# promptml

./: .gitignore  BUILD.md  LICENSE  README.md  prompt.pml  pyproject.toml  requirements.txt  requirements_dev.txt  test.py
.github/workflows/: build.yml  pylint.yml  unittest.yml
examples/: bash.pml  calculator.pml  character.pml  education.pml  poem-writer.pml  stock-analysis.pml  translate.pml  youtube.pml
examples/basic-calculator/: README.md  calculator.jinja2  main.py  requirements.txt
examples/jinja2/: README.md  calculator.jinja2  calculator.pml
examples/poem-writer/: README.md  main.py  poem.jinja2  poem.pml
examples/recommend-challenges/: main.py  recommend.jinja2  recommend.pml
promptml/: grammar.lark  parser.py  prompt.pml  test_parser.py
src/promptml/: __about__.py  grammar.lark  parser.py  serializer.py
tests/: test_parser.py  test_serializer.py
